Minor bug fixes, Formatting fixes
- Horizontal scrolling on code block
- Removed uneccessary <pre> elements
- Implemented consistent formatting for pages
- Added warning on Icon docs about overriding
- Mobile navigation on table docs

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,6 +43,7 @@ code {
 
 .main__route-container-outlet ~ * {
   height: 100%;
+  overflow-x: hidden;
   overflow-y: auto;
   padding: 3rem;
   position: absolute;
