--- a/src/app/features/ui-kit/components/icon-docs/icon-docs.component.scss
+++ b/src/app/features/ui-kit/components/icon-docs/icon-docs.component.scss
@@ -1,5 +1,5 @@
 .list {
-  line-break: 4rem;
+  line-height: 4rem;
   list-style: none;
 }
 
